# Relay-LLM-inference-Manager

./: .gitignore  ARCHITECTURE.md  DEMO.md  Makefile  README.md
.github/workflows/: ci.yml
eval/: gold.jsonl
infra/: docker-compose.yml
infra/postgres-init/: 001_init.sql
policies/: policy.demo.yaml  policy.dev.yaml
relay/: pyproject.toml
relay/app/: main.py
relay/app/api/: admin_routes.py  routes.py
relay/app/core/: backend.py  embeddings.py  logging.py  ollama_adapter.py  policy_engine.py  runtime.py  scheduler.py  settings.py
relay/app/db/: postgres.py  redis_client.py  semantic_cache_pg.py  traces_read.py
relay/app/models/: openai_chat.py
relay/app/tests/: test_health.py
relay/app/utils/: cache_keys.py  normalize.py
relay/eval/: baseline.json  candidate.json
scripts/: eval_replay.py  locustfile.py
